# tesi

./: .env  .env.example  .gitignore  .gitignore.txt  DOCUMENTAZIONE.md  LEGGIMI_SCRIPT.md  README.md  docker-compose.yml  setup.ps1  smoke_test.py  start.bat  start.ps1  stop.ps1
backend/: Dockerfile  demo_end_to_end.py  pyproject.toml  requirements-analysis.txt  requirements.txt
backend/app/: main.py
backend/app/analysis/: linguistic.py  multichannel.py  prosodic.py  sentiment_emotion.py  transcription.py
backend/app/api/: analysis.py  patients.py  reports.py  responses.py  sessions.py
backend/app/core/: config.py  database.py
backend/app/llm/: anthropic_provider.py  ollama_provider.py  provider.py
backend/app/longitudinal/: analyzer.py
backend/app/models/: __init__.py
backend/app/reporting/: aggregator.py  pdf_generator.py
backend/app/schemas/: api.py  cpt.py  digit_span.py  go_nogo.py  narrative.py  stroop.py
backend/app/scoring/: cpt_scorer.py  digit_span_scorer.py  go_nogo_scorer.py  stroop_scorer.py
backend/app/services/tests/: base.py  cpt_generator.py  digit_span_generator.py  go_nogo_generator.py  narrative_generator.py  stroop_generator.py
backend/app/tasks/: analysis_tasks.py
backend/tests/: test_analysis.py  test_fase7.py  test_schemas.py  test_scorers.py
docs/: Architettura_Progetto.docx  Fase1_Organizzazione_Informazioni.docx  Fase2_Architettura_Sviluppo.docx  machine_learning_tesi.odt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/styles/: index.css  (+1 more)
(+20 files in other folders)
