[tool.poetry]
name = "cognitive-assessment-platform"
version = "0.1.0"
description = "Piattaforma per valutazione malattie cognitive con test interattivi generati da LLM"
authors = ["Francesco Sabia"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Web framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
# Validation & config
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
# Database
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
# LLM providers
anthropic = "^0.42.0"
httpx = "^0.28.0"
# NLP / Analysis (Fase 6)
openai-whisper = {version = "^20240930", optional = true}
spacy = {version = "^3.8.0", optional = true}
librosa = {version = "^0.10.0", optional = true}
transformers = {version = "^4.47.0", optional = true}
torch = {version = "^2.5.0", optional = true}
# Scientific
numpy = "^2.1.0"
scikit-learn = "^1.5.0"
# Utilities
python-multipart = "^0.0.17"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.extras]
analysis = ["openai-whisper", "spacy", "librosa", "transformers", "torch"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
